--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <title> Reactgif </title>
         <meta name="description" content="A gif app created with React.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./src/css/dashboard.css"> </link>
     </head>
     <body>
         <!--[if lt IE 7]>
@@ -16,11 +17,14 @@
         <![endif]-->
 
         <div id="app">
-          HEY WORLD!
+
         </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="./src/js/lib/jquery.js"><\/script>')</script>
+
+        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
+        <script> window._ || document.write('<script src="./src/js/lib/underscore.js"><\/script>')</script>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.12.0/react.js"></script>
         <script>window.React || document.write('<script src="./src/js/lib/react.js"><\/script>')</script>
@@ -28,12 +32,10 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.12.0/JSXTransformer.js"></script>
         <script>window.JSXTransformer || document.write('<script src="./src/js/lib/JSXTransformer.js"><\/script>')</script>
 
-        <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore.js"></script>
-        <script> window._ || document.write('<script src="./src/js/lib/underscore.js"><\/script>')</script>
-        
         <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone.js"></script>
         <script>window.Backbone || document.write('<script src="./src/js/lib/backbone.js"><\/script>')</script>
 
-        <script src="./src/js/app.js"> </script>
+        <script src="./src/js/react/app.js"> </script>
+        <script src="./src/js/lib/images-loaded.min.js"></script>
     </body>
 </html>
