Works in Chrome. Let's ship it.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <meta name="description" content="A gif app created with React.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="./src/css/dashboard.css"> </link>
+        <link rel="stylesheet" href="./src/css/app.css"> </link>
+        <link rel="stylesheet" href="./src/css/image.css"> </link>
+        <link rel="stylesheet" href="./src/css/loading.css"> </link>
+        <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
         <!--[if lt IE 7]>
