require JSX files - Gulp - directory structure

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <title> Reactgif </title>
         <meta name="description" content="A gif app created with React.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./src/css/dashboard.css"> </link>
-        <link rel="stylesheet" href="./src/css/app.css"> </link>
-        <link rel="stylesheet" href="./src/css/image.css"> </link>
-        <link rel="stylesheet" href="./src/css/loading.css"> </link>
+        <link rel="stylesheet" href="./css/dashboard.css"> </link>
+        <link rel="stylesheet" href="./css/app.css"> </link>
+        <link rel="stylesheet" href="./css/image.css"> </link>
+        <link rel="stylesheet" href="./css/loading.css"> </link>
         <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     </head>
     <body>
@@ -39,7 +39,7 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone.js"></script>
         <script>window.Backbone || document.write('<script src="./src/js/lib/backbone.js"><\/script>')</script>
 
-        <script src="./src/js/react/app.js"> </script>
-        <script src="./src/js/lib/images-loaded.min.js"></script>
+        <script src="dist/js/App.js"></script>
+        <script src="js/libs/images-loaded.min.js"></script>
     </body>
 </html>
